--- a/package.json
+++ b/package.json
@@ -2,21 +2,16 @@
     "name": "angular-quickstart",
     "version": "1.0.0",
     "scripts": {
-        "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-        "lite": "lite-server",
-        "postinstall": "typings install",
-        "tsc": "tsc",
-        "tsc:w": "tsc -w",
-        "typings": "typings"
+        "start": "lite-server"
     },
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^3.0.0",
-        "lite-server": "^2.2.2",
         "typescript": "^2.0.3",
         "typings": "^1.4.0"
     },
     "dependencies": {
+        "lite-server": "^2.2.2",
         "@angular/common": "^2.0.1",
         "@angular/compiler": "^2.0.1",
         "@angular/core": "^2.0.1",
