--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "angular-quickstart",
     "version": "1.0.0",
     "scripts": {
-        "start": "lite-server"
+        "start": "http-server -p 80"
     },
     "license": "ISC",
     "devDependencies": {
@@ -11,7 +11,6 @@
         "typings": "^1.4.0"
     },
     "dependencies": {
-        "lite-server": "^2.2.2",
         "@angular/common": "^2.0.1",
         "@angular/compiler": "^2.0.1",
         "@angular/core": "^2.0.1",
@@ -24,6 +23,7 @@
         "angular-in-memory-web-api": "^0.1.1",
         "bootstrap": "^3.3.7",
         "core-js": "^2.4.1",
+        "http-server": "^0.9.0",
         "reflect-metadata": "^0.1.8",
         "rxjs": "^5.0.0-beta.12",
         "systemjs": "^0.19.39",
