--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "angular-quickstart",
     "version": "1.0.0",
     "scripts": {
-        "start": "http-server -p 80"
+        "start": "http-server"
     },
     "license": "ISC",
     "devDependencies": {
